// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-pg3j0v soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="c-vja32r soui-switch-indicator"
    dir="ltr"
  />
  <div
    class="cyxluxj soui-switch-content"
  >
    <div
      class="cjbv98i soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-pg3j0v soui-switch-wrapper cyh9i7q soui-switch-wrapper-checked c-hj7wxf soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-vja32r soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="coriufu soui-switch-loading"
      />
    </div>
    <div
      class="cyxluxj soui-switch-content"
    >
      <div
        class="cjbv98i soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-pg3j0v soui-switch-wrapper c-hj7wxf soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-vja32r soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="coriufu soui-switch-loading"
      />
    </div>
    <div
      class="cyxluxj soui-switch-content"
    >
      <div
        class="cjbv98i soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-pg3j0v soui-switch-wrapper c-jllpii soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-vja32r soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cyxluxj soui-switch-content"
    >
      <div
        class="cjbv98i soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-pg3j0v soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-vja32r soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cyxluxj soui-switch-content"
    >
      <div
        class="cjbv98i soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-pg3j0v soui-switch-wrapper c-jpnl12 soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-vja32r soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cyxluxj soui-switch-content"
    >
      <div
        class="cjbv98i soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-pg3j0v soui-switch-wrapper cyh9i7q soui-switch-wrapper-checked c-hj7wxf soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-vja32r soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cyxluxj soui-switch-content"
    >
      <div
        class="cjbv98i soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-pg3j0v soui-switch-wrapper c-hj7wxf soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-vja32r soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cyxluxj soui-switch-content"
    >
      <div
        class="cjbv98i soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
